--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
   margin: 0;
@@ -97,7 +97,7 @@ a:hover {
 
 .hamburger-icon.open span:first-child {
   transform: rotate(45deg) translate(10px, 5px);
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 }
 
 .hamburger-icon.open span:nth-child(2) {
@@ -106,12 +106,12 @@ a:hover {
 
 .hamburger-icon.open span:last-child {
   transform: rotate(-45deg) translate(10px, -5px);
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 }
 
 .hamburger-icon span:first-child {
   transform: none;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 }
 
 .hamburger-icon span:nth-child(2) {
@@ -120,7 +120,7 @@ a:hover {
 
 .hamburger-icon span:last-child {
   transform: none;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 }
 
 .menu-links {
@@ -153,3 +153,71 @@ a:hover {
 }
 
 /* Sections */
+
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
+}
+
+.section-container {
+  display: flex;
+}
+
+/* Profile section */
+#profile {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  height: 80vh;
+}
+
+.section-pic-container {
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+
+.section-text {
+  align-self: center;
+  text-align: center;
+}
+
+.section-text p {
+  font-weight: 600;
+}
+
+.section-text-para:nth-of-type(1) {
+  text-align: center;
+}
+.section-text-para:nth-of-type(2) {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+.title {
+  font-size: 3rem;
+  text-align: center;
+}
+
+#socials-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 1rem;
+}
+
+.icon {
+  cursor: pointer;
+  height: 2rem;
+}
+
+/* Buttons */
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
